--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/Movie-App
-    username: root
-    password: sadew200
-
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
-    show sql: true
+    show-sql: true
