--- a/pom.xml
+++ b/pom.xml
@@ -92,4 +92,22 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Spring Boot plugin to build an executable JAR -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.0</version> <!-- Make sure it matches your Spring Boot version -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
