--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>9.0.0</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version> <!-- Use this version -->
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
         <dependency>
@@ -98,7 +98,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.0</version> <!-- Make sure it matches your Spring Boot version -->
+                <version>3.3.3</version> <!-- MATCH your parent version -->
                 <executions>
                     <execution>
                         <goals>
@@ -107,6 +107,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
